# django-gdpr-helpers

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
gdpr_helpers/: __init__.py  admin.py  apps.py  forms.py  managers.py  models.py
gdpr_helpers/migrations/: 0001_initial.py  0002_auto_20200305_1530.py  0003_auto_20200414_1324.py  0004_auto_20200717_1413.py  0005_legalreason_name.py  0006_add_slug_field.py  0006_auto_20210311_1521.py  0007_populate_slug_values.py  0008_remove_slug_null.py
sandbox/: settings.py  urls.py
sandbox/example_app/: forms.py  models.py  urls.py  views.py
sandbox/example_app/migrations/: 0001_initial.py
sandbox/example_app/templates/example_app/: example.html
tests/: conftest.py  forms.py  models.py  settings.py
tests/unit/: test_forms.py  test_manager.py
