[metadata]
name = django-gdpr-helpers
version = attr: gdpr_helpers.__version__
author = Fabio Piras
author_email = fabio@godsofweb.com
description = A Django app for managing GDPR compliancy
long_description = file: README.rst
license = BSD-3-Clause
url= https://github.com/Arussil/django-gdpr-helpers
classifiers =
  Development Status :: 1 - Pre-Alpha
  Environment :: Web Environment
  Framework :: Django
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python 3.6
  Programming Language :: Python 3.7
  Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.6
include_package_data = true
packages = find:
zip_safe = false
install_requires = django>2.2,<3.0

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line-length = 88

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = .git
