[metadata]
name = django-gdpr-helpers
version = attr: gdpr_helpers.__version__
author = Fabio Piras
author_email = fabio@godsofweb.com
description = A Django app for managing GDPR compliancy
long_description = file: README.rst
license = BSD-3-Clause
classifiers =
  Development Status :: 1 - Pre-Alpha
  Environment :: Web Environment
  Framework :: Django
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python 3.6
  Programming Language :: Python 3.7
  Topic :: Internet :: WWW/HTTP
project_urls = 
  Source = https://github.com/Arussil/django-gdpr-helpers
  Tracker = https://github.com/Arussil/django-gdpr-helpers/issues

[options]
python_requires = >=3.6
include_package_data = true
packages = find:
zip_safe = false
install_requires = django>2.2,<4.0

[options.extras_require]
test =
  pytest-django
  freezegun
  coverage

[options.packages.find]
exclude = tests*

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = .git
